# TelegramPhigrosBot

./: .gitignore  README.md  bot.py  config.example.json  config.py  difficulty.tsv  model.py  pyproject.toml
phigros/: __init__.py  gameInfo.py  phigros.py  phigrosLibrary.py
