[tool.poetry]
name = "tgphibot"
version = "0.1.0"
description = ""
authors = ["luohua"]
license = "AGPL"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
httpx = "^0.27.0"
pillow = "^10.3.0"
loguru = "^0.7.2"
telethon = {extras = ["full"], version = "^1.35.0"}
pydantic = "^2.7.2"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
